more work on restaurant online orders

--- a/git/formuladb-env/frmdb-apps/pizza-time/index.html
+++ b/git/formuladb-env/frmdb-apps/pizza-time/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="frmdb_display_date" content="">
 </head>
-<body class="frmdb-editor-normal">
+<body class="frmdb-editor-normal" data-fr="" data-frmdb-record="Restaurant_Order~~$AUTO_GENERATE_ID_FOR_NEW_RECORD">
     <frmdb-t-main-nav class="">
         <div data-frmdb-fragment="_nav.html"></div>
     </frmdb-t-main-nav>
@@ -20,7 +20,7 @@
                 </p>
             </div>
         </frmdb-t-main>
-        <frmdb-t-aside class="">
+        <frmdb-t-aside class="" data-frmdb-record="Restaurant_Order~~$AUTO_GENERATE_ID_FOR_NEW_RECORD">
             <div data-frmdb-fragment="_form.html"></div>
         </frmdb-t-aside>
         <frmdb-t-section-divider></frmdb-t-section-divider>
@@ -40,7 +40,7 @@
                     <p>Quisque ornare, quam a blandit malesuada</p>
                 </div>
                 <frmdb-t-card-action class="">
-                    <a href="javascript:void(0)" class="">Action</a>
+                    <a href="order.html" class="">Order</a>
                 </frmdb-t-card-action>
                 <frmdb-t-card-note class="">
                     <span>INFO 
@@ -56,7 +56,7 @@
                     <p>Integer sit amet nisi viverra, pharetra nibh</p>
                 </div>
                 <frmdb-t-card-action class="">
-                    <a href="javascript:void(0)" class="">Action</a>
+                    <a href="order.html" class="">Order</a>
                 </frmdb-t-card-action>
                 <frmdb-t-card-note class="">
                     <span>INFO 
@@ -72,7 +72,7 @@
                     <p>Curabitur suscipit, massa eu maximus fringilla</p>
                 </div>
                 <frmdb-t-card-action class="">
-                    <a href="javascript:void(0)" class="">Action</a>
+                    <a href="order.html" class="">Order</a>
                 </frmdb-t-card-action>
                 <frmdb-t-card-note class="">
                     <span>INFO 
@@ -88,7 +88,7 @@
                     <p>Etiam porta magna eu rutrum rhoncus</p>
                 </div>
                 <frmdb-t-card-action class="">
-                    <a href="javascript:void(0)" class="">Action</a>
+                    <a href="order.html" class="">Order</a>
                 </frmdb-t-card-action>
                 <frmdb-t-card-note class="">
                     <span>INFO 
@@ -182,6 +182,10 @@
     <frmdb-t-section-divider></frmdb-t-section-divider>
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
+    <frmdb-fe></frmdb-fe>
     <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
     <frmdb-fe></frmdb-fe>
     <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
