--- a/git/formuladb-env/frmdb-apps/pizza-time/order.html
+++ b/git/formuladb-env/frmdb-apps/pizza-time/order.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="frmdb_display_date" content="">
 </head>
-<body class="frmdb-editor-normal" data-frmdb-record="Restaurant_Order~~$AUTO_GENERATE_ID_FOR_NEW_RECORD">
+<body class="frmdb-editor-normal" data-frmdb-record="Restaurant_Order~~2zG5UkK6KrVLcBNT6jtLyd">
     <frmdb-t-main-nav class="">
         <div data-frmdb-fragment="_nav.html"></div>
     </frmdb-t-main-nav>
@@ -18,12 +18,12 @@
             </div>
         </frmdb-t-main>
         <frmdb-t-aside class="">
-            <form class="p-3">
+            <form class="p-3 was-validated">
                 <div class="row">
                     <div class="col-md-6 d-flex flex-column justify-content-center">
                         <div class="form-group">
                             <div class="input-group date">
-                                <input type="tel" class="form-control" placeholder="phone" name="phone">
+                                <input type="tel" class="form-control" placeholder="phone" name="$FRMDB.Restaurant_Order[].phone" data-frmdb-value="$FRMDB.Restaurant_Order[].phone" title="" data-frmdb-pending="undefined" required="">
                                 <div class="input-group-append">
                                     <span class="input-group-text">
                                         <frmdb-icon name="fontawesome-solid-phone-call-earphone-number-support-telephone-voice" class="text-white sz-1"></frmdb-icon>
@@ -33,7 +33,7 @@
                         </div>
                         <div class="form-group">
                             <div class="input-group date">
-                                <input type="email" name="email" class="form-control" placeholder="email@domain.com">
+                                <input type="email" name="$FRMDB.Restaurant_Order[].email" class="form-control" placeholder="email@domain.com" data-frmdb-value="$FRMDB.Restaurant_Order[].email" title="" data-frmdb-pending="undefined" required="">
                                 <div class="input-group-append">
                                     <span class="input-group-text">
                                         <frmdb-icon name="fontawesome-solid-at-address-author-e-mail-email-handle" class="text-white sz-1"></frmdb-icon>
@@ -43,7 +43,7 @@
                         </div>
                         <div class="form-group">
                             <div class="input-group date">
-                                <input type="tel" class="form-control" placeholder="delivery address" name="phone">
+                                <input type="tel" class="form-control" placeholder="delivery address" name="$FRMDB.Restaurant_Order[].delivery_address" data-frmdb-value="$FRMDB.Restaurant_Order[].delivery_address" title="" data-frmdb-pending="undefined">
                                 <div class="input-group-append">
                                     <span class="input-group-text">
                                         <frmdb-icon name="fontawesome-solid-map-marker-alt-address-coordinates-destination-gps-localize-location-map-navigation-paper-pin-place-point_of_interest-position-route-travel" class="text-white sz-1"></frmdb-icon>
@@ -51,7 +51,13 @@
                                 </div>
                             </div>
                         </div>
-                        <button type="submit" class="btn btn-primary w-100" href="javascript:void(0)">Order</button>
+                        <div class="form-group row">
+                            <label class="col-form-label col-md-3" for="inputDefault">Total</label>
+                            <div class="col-md-6">
+                                <input type="text" class="form-control" placeholder="Default input" id="inputDefault">
+                            </div>
+                            <button type="submit" class="btn btn-primary col-md-3 m-3 m-md-0" href="javascript:void(0)">Order</button>
+                        </div>
                     </div>
                     <div class="col-md-6 text-center">
                         <div class="col vh-35">
@@ -59,6 +65,15 @@
                         </div>
                     </div>
                 </div>
+                <frmdb-alert data-frmdb-submit-status="" class="" style="position: fixed; top: 0px; right: 0px; padding: 5px;">
+                    <div class="alert shadow border alert-dismissible alert-success fade show" role="alert">
+                        <strong>Changes Saved.</strong>
+                        <span></span>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">×</span>
+                        </button>
+                    </div>
+                </frmdb-alert>
             </form>
         </frmdb-t-aside>
         <frmdb-t-section-divider></frmdb-t-section-divider>
@@ -220,6 +235,10 @@
     <frmdb-t-section-divider></frmdb-t-section-divider>
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
+    <frmdb-fe></frmdb-fe>
     <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
     <frmdb-fe></frmdb-fe>
     <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
