--- a/git/formuladb-env/frmdb-apps/pizza-time/order.html
+++ b/git/formuladb-env/frmdb-apps/pizza-time/order.html
@@ -67,8 +67,8 @@
                 </div>
                 <frmdb-alert data-frmdb-submit-status="" class="" style="position: fixed; top: 0px; right: 0px; padding: 5px;">
                     <div class="alert shadow border alert-dismissible alert-success fade show" role="alert">
-                        <strong>Changes Saved.</strong>
-                        <span></span>
+                        <strong>some event!</strong>
+                        <span>details of the event.</span>
                         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                             <span aria-hidden="true">×</span>
                         </button>
@@ -84,21 +84,19 @@
             <h2 id="thememediacards">Menu</h2>
             <p>Section lead paragraph, some text about the content described in this section.</p>
         </div>
-        <frmdb-t-card-deck class="frmdb-cards-4">
+        <frmdb-t-card-deck class="frmdb-cards-4" data-frmdb-table="$FRMDB.Restaurant_Menu_Item[]" data-frmdb-record="Restaurant_Menu_Item~~vVsexqeTReF1iWoAUU4ten" data-frmdb-table-limit="1">
             <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/pizza-time/static/52e8d544425aa814f6da8c7dda2936771d3edce4524c704c7d2979d2924ec35f_1280.jpg&quot;);"></frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(\/formuladb-env\/frmdb-apps\/pizza-time\/static\/57e3d1474d50ac14f6da8c7dda2936771d3edce4524c704c7d2979d2924cc558_1280\.jpg);" data-frmdb-value="$FRMDB.Restaurant_Menu_Item[].picture"></frmdb-t-img>
                 <div class="card-body">
-                    <h5>NEW Pizza</h5>
-                    <h6>Card 1 subtitle</h6>
-                    <p>Quisque ornare, quam a blandit malesuada</p>
+                    <h5 data-frmdb-value="$FRMDB.Restaurant_Menu_Item[].name">pizza 2</h5>
+                    <p data-frmdb-value="$FRMDB.Restaurant_Menu_Item[].description">best pizza in town</p>
                 </div>
                 <frmdb-t-card-action class="">
                     <a href="javascript:void(0)" class="">Action</a>
                 </frmdb-t-card-action>
                 <frmdb-t-card-note class="">
-                    <span>INFO 
-                        <small>info</small>
-                    </span>
+                    <span data-frmdb-value="$FRMDB.Restaurant_Menu_Item[].price">10</span>
+                    <small>EUR</small>
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="">
@@ -235,6 +233,10 @@
     <frmdb-t-section-divider></frmdb-t-section-divider>
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
+    <frmdb-fe></frmdb-fe>
     <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
     <frmdb-fe></frmdb-fe>
     <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
