--- a/git/formuladb-env/frmdb-apps/base-app/forms.html
+++ b/git/formuladb-env/frmdb-apps/base-app/forms.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <meta charset="utf-8">
     <title>FormulaDB Theme- Imperial</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<link rel="stylesheet" href="./formuladb-look.css">
-
+    <meta name="author" content="">
+    <meta name="description" content="">
+    <meta name="frmdb_display_date" content="">
 </head>
-
-<body>
-
+<body class="frmdb-editor-normal">
     <div class="container" data-offset="0">
-
-        <!-- Forms
-                                        ================================================== -->
         <div class="bs-docs-section">
             <div class="row">
                 <div class="col-lg-12">
@@ -24,17 +16,25 @@
                     </div>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-lg-6">
                     <div class="bs-component">
                         <form>
+                            <h4>Small form</h4>
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">Email address</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                                <small id="emailHelp" class="form-text text-muted">We'll never share your email with
+                                        anyone else.</small>
+                            </div>
+                        </form>
+                        <form>
                             <fieldset>
-                                <legend>Legend</legend>
+                                <legend>Fieldset legend</legend>
                                 <div class="form-group row">
                                     <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
                                     <div class="col-sm-10">
-                                        <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="email@example.com">
+                                        <input type="text" readonly="" class="form-control-plaintext" id="staticEmail" value="email@example.com">
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -59,7 +59,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="exampleSelect2">Example multiple select</label>
-                                    <select multiple class="form-control" id="exampleSelect2">
+                                    <select multiple="" class="form-control" id="exampleSelect2">
                                         <option>1</option>
                                         <option>2</option>
                                         <option>3</option>
@@ -82,8 +82,8 @@
                                     <legend>Radio buttons</legend>
                                     <div class="form-check">
                                         <label class="form-check-label">
-                                            <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios1" value="option1" checked>
-                                            Option one is this and that&mdash;be sure to include why it's great
+                                            <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios1" value="option1" checked="">
+                                            Option one is this and that—be sure to include why it's great
                                         </label>
                                     </div>
                                     <div class="form-check">
@@ -94,7 +94,7 @@
                                     </div>
                                     <div class="form-check disabled">
                                         <label class="form-check-label">
-                                            <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios3" value="option3" disabled>
+                                            <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios3" value="option3" disabled="">
                                             Option three is disabled
                                         </label>
                                     </div>
@@ -103,13 +103,13 @@
                                     <legend>Checkboxes</legend>
                                     <div class="form-check">
                                         <label class="form-check-label">
-                                            <input class="form-check-input" type="checkbox" value="" checked>
-                                            Option one is this and that&mdash;be sure to include why it's great
+                                            <input class="form-check-input" type="checkbox" value="" checked="">
+                                            Option one is this and that—be sure to include why it's great
                                         </label>
                                     </div>
                                     <div class="form-check disabled">
                                         <label class="form-check-label">
-                                            <input class="form-check-input" type="checkbox" value="" disabled>
+                                            <input class="form-check-input" type="checkbox" value="" disabled="">
                                             Option two is disabled
                                         </label>
                                     </div>
@@ -120,49 +120,50 @@
                     </div>
                 </div>
                 <div class="col-lg-4 offset-lg-1">
-
+                    <form>
+                        <h4>Inline form</h4>
+                        <div class="form-group row">
+                            <label class="col col-md-4" for="exampleInputEmail1">Email address</label>
+                            <div class="col col-md-8">
+                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                            </div>
+                        </div>
+                    </form>
                     <form class="bs-component">
                         <div class="form-group">
-                            <fieldset disabled>
+                            <fieldset disabled="">
                                 <label class="control-label" for="disabledInput">Disabled input</label>
                                 <input class="form-control" id="disabledInput" type="text" placeholder="Disabled input here..." disabled="">
                             </fieldset>
                         </div>
-
                         <div class="form-group">
                             <fieldset>
                                 <label class="control-label" for="readOnlyInput">Readonly input</label>
-                                <input class="form-control" id="readOnlyInput" type="text" placeholder="Readonly input here…" readonly>
+                                <input class="form-control" id="readOnlyInput" type="text" placeholder="Readonly input here…" readonly="">
                             </fieldset>
                         </div>
-
                         <div class="form-group has-success">
                             <label class="form-control-label" for="inputSuccess1">Valid input</label>
                             <input type="text" value="correct value" class="form-control is-valid" id="inputValid">
                             <div class="valid-feedback">Success! You've done it.</div>
                         </div>
-
                         <div class="form-group has-danger">
                             <label class="form-control-label" for="inputDanger1">Invalid input</label>
                             <input type="text" value="wrong value" class="form-control is-invalid" id="inputInvalid">
                             <div class="invalid-feedback">Sorry, that username's taken. Try another?</div>
                         </div>
-
                         <div class="form-group">
                             <label class="col-form-label col-form-label-lg" for="inputLarge">Large input</label>
                             <input class="form-control form-control-lg" type="text" placeholder=".form-control-lg" id="inputLarge">
                         </div>
-
                         <div class="form-group">
                             <label class="col-form-label" for="inputDefault">Default input</label>
                             <input type="text" class="form-control" placeholder="Default input" id="inputDefault">
                         </div>
-
                         <div class="form-group">
                             <label class="col-form-label col-form-label-sm" for="inputSmall">Small input</label>
                             <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm" id="inputSmall">
                         </div>
-
                         <div class="form-group">
                             <label class="control-label">Input addons</label>
                             <div class="form-group">
@@ -178,13 +179,12 @@
                             </div>
                         </div>
                     </form>
-
                     <div class="bs-component">
                         <fieldset>
                             <legend>Custom forms</legend>
                             <div class="form-group">
                                 <div class="custom-control custom-radio">
-                                    <input type="radio" id="customRadio1" name="customRadio" class="custom-control-input" checked>
+                                    <input type="radio" id="customRadio1" name="customRadio" class="custom-control-input" checked="">
                                     <label class="custom-control-label" for="customRadio1">Toggle this custom
                                         radio</label>
                                 </div>
@@ -194,37 +194,37 @@
                                         radio</label>
                                 </div>
                                 <div class="custom-control custom-radio">
-                                    <input type="radio" id="customRadio3" name="customRadio" class="custom-control-input" disabled>
+                                    <input type="radio" id="customRadio3" name="customRadio" class="custom-control-input" disabled="">
                                     <label class="custom-control-label" for="customRadio3">Disabled custom radio</label>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="custom-control custom-checkbox">
-                                    <input type="checkbox" class="custom-control-input" id="customCheck1" checked>
+                                    <input type="checkbox" class="custom-control-input" id="customCheck1" checked="">
                                     <label class="custom-control-label" for="customCheck1">Check this custom
                                         checkbox</label>
                                 </div>
                                 <div class="custom-control custom-checkbox">
-                                    <input type="checkbox" class="custom-control-input" id="customCheck2" disabled>
+                                    <input type="checkbox" class="custom-control-input" id="customCheck2" disabled="">
                                     <label class="custom-control-label" for="customCheck2">Disabled custom
                                         checkbox</label>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="custom-control custom-switch">
-                                    <input type="checkbox" class="custom-control-input" id="customSwitch1" checked>
+                                    <input type="checkbox" class="custom-control-input" id="customSwitch1" checked="">
                                     <label class="custom-control-label" for="customSwitch1">Toggle this switch
                                         element</label>
                                 </div>
                                 <div class="custom-control custom-switch">
-                                    <input type="checkbox" class="custom-control-input" disabled id="customSwitch2">
+                                    <input type="checkbox" class="custom-control-input" disabled="" id="customSwitch2">
                                     <label class="custom-control-label" for="customSwitch2">Disabled switch
                                         element</label>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <select class="custom-select">
-                                    <option selected>Open this select menu</option>
+                                    <option selected="">Open this select menu</option>
                                     <option value="1">One</option>
                                     <option value="2">Two</option>
                                     <option value="3">Three</option>
@@ -243,17 +243,15 @@
                             </div>
                         </fieldset>
                     </div>
-
                 </div>
             </div>
         </div>
     </div>
-
-    <div data-frmdb-fragment="_footer.html" src="_footer.html"></div>
-
+    <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
 </body>
-
 </html>
-
 </html>
