--- a/formuladb/editor-new-column-modal.html
+++ b/formuladb/editor-new-column-modal.html
@@ -42,6 +42,22 @@
                         </div>
                     </div>
 
+                    <!-- <div class="form-group row" data-key="href">
+                        <label class="col-sm-3 control-label">Column Type</label>
+                        <div class="col-sm-9 input">
+                            <select name="columnType" class="form-control">
+                                NUMBER
+                                STRING
+                                BOOLEAN
+                                DOCUMENT
+                                DATETIME
+                                ACTION
+                                IMAGE
+                                <option></option>
+                            </select>
+                        </div>
+                    </div> -->
+
                 </div>
 
                 <div class="modal-footer">
