--- a/git/formuladb-env/frmdb-apps/pizza-time/order.html
+++ b/git/formuladb-env/frmdb-apps/pizza-time/order.html
@@ -20,7 +20,7 @@
         <frmdb-t-aside class="">
             <form class="p-3 was-validated">
                 <div class="row">
-                    <div class="col-md-6 d-flex flex-column justify-content-center">
+                    <div class="col-md-4 d-flex flex-column justify-content-center">
                         <div class="form-group">
                             <div class="input-group date">
                                 <input type="tel" class="form-control" placeholder="phone" name="$FRMDB.Restaurant_Order[].phone" data-frmdb-value="$FRMDB.Restaurant_Order[].phone" title="" data-frmdb-pending="undefined" required="">
@@ -51,21 +51,21 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="form-group row">
-                            <label class="col-form-label col-md-3" for="inputDefault">Total</label>
-                            <div class="col-md-6">
-                                <input type="text" class="form-control" placeholder="Default input" id="inputDefault">
-                            </div>
-                            <button type="submit" class="btn btn-primary col-md-3 m-3 m-md-0" href="javascript:void(0)">Order</button>
-                        </div>
                     </div>
-                    <div class="col-md-6 text-center">
-                        <div class="col vh-35">
+                    <div class="col text-center d-flex flex-column justify-content-center">
+                        <div class="col vh-25">
                             <iframe class="w-100 h-100 border-0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22236.40558254599!2d-118.25292394686001!3d34.057682914027104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c75ddc27da13%3A0xe22fdf6f254608f4!2z4Kay4Ka4IOCmj-CmnuCnjeCmnOCnh-CmsuCnh-CmuCwg4KaV4KeN4Kav4Ka-4Kay4Ka_4Kar4KeL4Kaw4KeN4Kao4Ka_4Kav4Ka84Ka-LCDgpq7gpr7gprDgp43gppXgpr_gpqgg4Kav4KeB4KaV4KeN4Kak4Kaw4Ka-4Ka34KeN4Kaf4KeN4Kaw!5e0!3m2!1sbn!2sbd!4v1532328708137" allowfullscreen=""></iframe>
                         </div>
                     </div>
+                    <div class="col-md-2 d-flex flex-column justify-content-top">
+                        <div class="form-group">
+                            <label class="col-form-label col-md-3" for="inputDefault">Total</label>
+                            <input type="text" class="form-control" placeholder="0" id="inputDefault">
+                        </div>
+                        <button type="submit" class="btn btn-primary " href="javascript:void(0)">FinalizeOrder</button>
+                    </div>
                 </div>
-                <frmdb-alert data-frmdb-submit-status="" class="" style="position: fixed; top: 0px; right: 0px; padding: 5px;">
+                <frmdb-alert data-frmdb-submit-status="" class="d-none" style="position: fixed; top: 0px; right: 0px; padding: 5px;">
                     <div class="alert shadow border alert-dismissible alert-success fade show" role="alert">
                         <strong>some event!</strong>
                         <span>details of the event.</span>
@@ -90,11 +90,11 @@
                 <div class="card-body">
                     <h5 data-frmdb-value="$FRMDB.Restaurant_Menu_Item[].name">pizza 2</h5>
                     <p data-frmdb-value="$FRMDB.Restaurant_Menu_Item[].description">best pizza in town</p>
-                    <form data-frmdb-record="Restaurant_Order_Item~~">
+                    <form data-frmdb-record="Restaurant_Order_Item~~" class="was-validated">
                         <div class="form-group row">
                             <label class="col col-md-6" for="exampleInputEmail1">Quantity</label>
                             <div class="col col-md-6">
-                                <input type="number" class="form-control" id="exampleInputEmail1" aria-describedby="quantity" placeholder="1" data-frmdb-value="$FRMDB.Restaurant_Order_Item[].quantity" name="$FRMDB.Restaurant_Order_Item[].quantity">
+                                <input type="number" class="form-control" id="exampleInputEmail1" aria-describedby="quantity" placeholder="1" data-frmdb-value="$FRMDB.Restaurant_Order_Item[].quantity" name="$FRMDB.Restaurant_Order_Item[].quantity" title="" data-frmdb-pending="">
                             </div>
                         </div>
                     </form>
