added data-frmdb-rules for more advanced GUI business logic

--- a/git/formuladb-env/frmdb-apps/formuladb-io/index.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-io/index.html
@@ -358,7 +358,7 @@
         </div>
     </section>
     <div class="modal" id="frmdbModal" style="display: none;" aria-hidden="true">
-        <div data-frmdb-record="WishListRequest~~$AUTO_GENERATE_ID_FOR_NEW_RECORD" style="display: initial" role="dialog" tabindex="-1" class="modal" id="frmdbModal">
+        <div data-frmdb-record="WishListRequest~~$AUTOID" style="display: initial" role="dialog" tabindex="-1" class="modal" id="frmdbModal">
             <div role="document" class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
