--- a/git/formuladb-env/frmdb-apps/pizza-time/index.html
+++ b/git/formuladb-env/frmdb-apps/pizza-time/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="frmdb_display_date" content="">
 </head>
-<body class="frmdb-editor-normal" data-fr="" data-frmdb-record="Restaurant_Order~~$AUTO_GENERATE_ID_FOR_NEW_RECORD">
+<body class="frmdb-editor-normal" data-fr="" data-frmdb-record="Restaurant_Order~~$AUTOID">
     <frmdb-t-main-nav class="">
         <div data-frmdb-fragment="_nav.html"></div>
     </frmdb-t-main-nav>
@@ -21,7 +21,7 @@
                 <a href="order.html" class="btn btn-primary mx-auto">Menu</a>
             </div>
         </frmdb-t-main>
-        <frmdb-t-aside class="" data-frmdb-record="Restaurant_Order~~$AUTO_GENERATE_ID_FOR_NEW_RECORD">
+        <frmdb-t-aside class="" data-frmdb-record="Restaurant_Order~~$AUTOID">
             <div data-frmdb-fragment="_form.html"></div>
         </frmdb-t-aside>
         <frmdb-t-section-divider></frmdb-t-section-divider>
