--- a/git/formuladb-env/frmdb-apps/pizza-time/order.html
+++ b/git/formuladb-env/frmdb-apps/pizza-time/order.html
@@ -84,13 +84,13 @@
             <h2 id="thememediacards">Menu</h2>
             <p>Section lead paragraph, some text about the content described in this section.</p>
         </div>
-        <frmdb-t-card-deck class="frmdb-cards-4" data-frmdb-table="$FRMDB.Restaurant_Menu_Item[]" data-frmdb-record="Restaurant_Menu_Item~~vVsexqeTReF1iWoAUU4ten" data-frmdb-table-limit="1">
-            <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(\/formuladb-env\/frmdb-apps\/pizza-time\/static\/57e3d1474d50ac14f6da8c7dda2936771d3edce4524c704c7d2979d2924cc558_1280\.jpg);" data-frmdb-value="$FRMDB.Restaurant_Menu_Item[].picture"></frmdb-t-img>
+        <frmdb-t-card-deck class="frmdb-cards-4">
+            <frmdb-t-card-media-main class="" data-frmdb-table="$FRMDB.Restaurant_Menu_Item[]" data-frmdb-record="Restaurant_Menu_Item~~vVsexqeTReF1iWoAUU4ten" data-frmdb-table-limit="1">
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/pizza-time/static/57e3d1474d50ac14f6da8c7dda2936771d3edce4524c704c7d2979d2924cc558_1280.jpg&quot;);" data-frmdb-value="$FRMDB.Restaurant_Menu_Item[].picture" data-frmdb-record="Restaurant_Menu_Item~~vVsexqeTReF1iWoAUU4ten"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-frmdb-value="$FRMDB.Restaurant_Menu_Item[].name">pizza 2</h5>
                     <p data-frmdb-value="$FRMDB.Restaurant_Menu_Item[].description">best pizza in town</p>
-                    <form data-frmdb-record="Restaurant_Order_Item~~" class="was-validated">
+                    <form data-frmdb-record="Restaurant_Order_Item~~" class="was-validated" data-frmdb-bind-to-record="$FRMDB.Restaurant_Order_Item~~" data-frmdb-rules="menu_item_id = $CLOSEST();;">
                         <div class="form-group row">
                             <label class="col col-md-6" for="exampleInputEmail1">Quantity</label>
                             <div class="col col-md-6">
@@ -103,7 +103,7 @@
                     <a href="javascript:void(0)" class="">Action</a>
                 </frmdb-t-card-action>
                 <frmdb-t-card-note class="">
-                    <span data-frmdb-value="$FRMDB.Restaurant_Menu_Item[].price">10.00000</span>
+                    <span data-frmdb-value=":TEXT(price,&quot;##,##0.00&quot;):$FRMDB.Restaurant_Menu_Item[]">10.00</span>
                     <small>EUR</small>
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
@@ -241,6 +241,14 @@
     <frmdb-t-section-divider></frmdb-t-section-divider>
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
+    <frmdb-fe></frmdb-fe>
     <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
     <frmdb-fe></frmdb-fe>
     <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
