--- a/git/formuladb-env/frmdb-apps/users/index.html
+++ b/git/formuladb-env/frmdb-apps/users/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="frmdb_display_date" content="">
 </head>
-<body data-frmdb-record="Room_Booking~~$AUTO_GENERATE_ID_FOR_NEW_RECORD" class="frmdb-editor-normal">
+<body data-frmdb-record="Room_Booking~~$AUTOID" class="frmdb-editor-normal">
     <section class="accomodation_area pt-3">
         <div class="container">
             <div class="row justify-content-center">
