work on multi object view update in the same transaction; needed for _id change, multi-level DAG formulas

--- a/formuladb/editor.html
+++ b/formuladb/editor.html
@@ -98,7 +98,7 @@
                 </a>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="javascript:void(0)" data-frmdb-table="$FRMDB.$App[]" data-frmdb-table-limit="50"
-                        data-frmdb-value=":$ID:$FRMDB.$App[]._id" data-frmdb-attr="data-frmdb-editor-change-app:$ID(_id):$FRMDB.$App[]">app 1</a>
+                        data-frmdb-value=":ID(_id):$FRMDB.$App[]" data-frmdb-attr="data-frmdb-editor-change-app:ID(_id):$FRMDB.$App[]">app 1</a>
                 </div>
             </li>
             <li class="nav-item dropdown frmdb-dropdown-hover">
