fix data binding for single records

--- a/git/formuladb-env/frmdb-apps/restaurant/_form.html
+++ b/git/formuladb-env/frmdb-apps/restaurant/_form.html
@@ -3,7 +3,7 @@
     <div class="col-md-4 d-flex flex-column justify-content-center">
         <div class="form-group">
             <div class="input-group date">
-                <input type="tel" class="form-control" placeholder="phone" name="$FRMDB.Restaurant_Order[].phone" data-frmdb-value="$FRMDB.Restaurant_Order[].phone" required="" title="">
+                <input type="tel" class="form-control" placeholder="phone" name="$FRMDB.Restaurant_Order{}.phone" data-frmdb-value="$FRMDB.Restaurant_Order{}.phone" required="" title="">
                 <div class="input-group-append">
                     <span class="input-group-text">
                         <frmdb-icon name="fontawesome-solid-phone-call-earphone-number-support-telephone-voice" class="text-white sz-1"></frmdb-icon>
@@ -15,7 +15,7 @@
     <div class="col-md-4 text-center">
         <div class="form-group">
             <div class="input-group date">
-                <input type="email" name="$FRMDB.Restaurant_Order[].email" class="form-control" placeholder="email@domain.com" data-frmdb-value="$FRMDB.Restaurant_Order[].email" required="" title="">
+                <input type="email" name="$FRMDB.Restaurant_Order{}.email" class="form-control" placeholder="email@domain.com" data-frmdb-value="$FRMDB.Restaurant_Order{}.email" required="" title="">
                 <div class="input-group-append">
                     <span class="input-group-text">
                         <frmdb-icon name="fontawesome-solid-at-address-author-e-mail-email-handle" class="text-white sz-1"></frmdb-icon>
