--- a/formuladb/editor-new-page-modal.html
+++ b/formuladb/editor-new-page-modal.html
@@ -5,7 +5,7 @@
 
             <div class="modal-content">
                 <div class="modal-header">
-                    <p class="modal-title text-primary"><i class="frmdb-i-file"></i> New page</p>
+                    <p class="modal-title text-primary"><i class="frmdb-i-file"></i> <span data-frmdb-value="modalTitle">New page</span></p>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true"><small><i class="frmdb-i-close"></i></small></span>
                     </button>
