--- a/formuladb/editor.html
+++ b/formuladb/editor.html
@@ -15,8 +15,6 @@
         <div class="button-bar flex-grow-0 d-flex">
             <frmdb-formula-editor></frmdb-formula-editor>
 
-            <frmdb-table-editor data-frmdb-attr="table-name:selectedTableId"></frmdb-table-editor>
-
             <div class="btn-group mr-3" role="group">
                 <button class="btn btn-light" title="Undo most recent change" id="undo-btn" data-frmdb-action="undo" data-vvveb-shortcut="ctrl+z">
                     <i class="frmdb-i-1841775-undo"></i>
@@ -137,8 +135,10 @@
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="table-options">
                     <a class="dropdown-item" id="new-table-btn" title="New Table"><i class="frmdb-i-plus-circle"></i> New Table</a>
                     <div class="dropdown-divider"></div>
+                    <frmdb-table-editor data-frmdb-attr="table-name:selectedTableId"></frmdb-table-editor>
+                    <div class="dropdown-divider"></div>
                     <a class="dropdown-item" id="delete-table-btn" title="Delete Table" data-frmdb-prop="tableToDelete::selectedTableId"><i
-                            class="frmdb-i-trash"></i> Delete Table <span data-frmdb-value="selectedTableId"></span></a>
+                            class="frmdb-i-trash"></i> Delete Table <br/><span data-frmdb-value="selectedTableId"></span></a>
                 </div>
             </li>
         </ul>
@@ -166,7 +166,7 @@
                     <a class="dropdown-item" id="new-page-btn" title="New Page"><i class="frmdb-i-plus-circle"></i> New Page</a>
                     <a class="dropdown-item" id="edit-page-btn" title="Edit Page"><i class="frmdb-i-edit"></i> Edit Page Properties</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" id="delete-page-btn" title="Delete Page"><i class="frmdb-i-trash"></i> Delete Page <span data-frmdb-value="selectedPageName"></span></a>
+                    <a class="dropdown-item" id="delete-page-btn" title="Delete Page"><i class="frmdb-i-trash"></i> Delete Page <br/><span data-frmdb-value="selectedPageName"></span></a>
                 </div>
             </li>
         </ul>
