--- a/git/formuladb-env/frmdb-apps/restaurant/order.html
+++ b/git/formuladb-env/frmdb-apps/restaurant/order.html
@@ -10,7 +10,7 @@
     <frmdb-t-main-nav class="">
         <div data-frmdb-fragment="_nav.html"></div>
     </frmdb-t-main-nav>
-    <frmdb-t-cover style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/pizza-time/static/55e0d544495ba914f6da8c7dda2936771d3edce4524c704c7d2979d2924cc558_1280.jpg&quot;);" class="">
+    <frmdb-t-cover style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/55e0d544495ba914f6da8c7dda2936771d3edce4524c704c7d2979d2924cc558_1280.jpg&quot;);" class="">
         <frmdb-t-main class="">
             <div class="jumbotron col-12 col-lg-8">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
@@ -23,7 +23,7 @@
                     <div class="col-md-4 d-flex flex-column justify-content-center">
                         <div class="form-group">
                             <div class="input-group date">
-                                <input type="tel" class="form-control" placeholder="phone" name="$FRMDB.Restaurant_Order[].phone" data-frmdb-value="$FRMDB.Restaurant_Order[].phone" title="" data-frmdb-pending="" required="">
+                                <input type="tel" class="form-control" placeholder="phone" name="$FRMDB.Restaurant_Order{}.phone" data-frmdb-value="$FRMDB.Restaurant_Order{}.phone" title="" data-frmdb-pending="" required="">
                                 <div class="input-group-append">
                                     <span class="input-group-text">
                                         <frmdb-icon name="fontawesome-solid-phone-call-earphone-number-support-telephone-voice" class="text-white sz-1"></frmdb-icon>
@@ -33,7 +33,7 @@
                         </div>
                         <div class="form-group">
                             <div class="input-group date">
-                                <input type="email" name="$FRMDB.Restaurant_Order[].email" class="form-control" placeholder="email@domain.com" data-frmdb-value="$FRMDB.Restaurant_Order[].email" title="" data-frmdb-pending="" required="">
+                                <input type="email" name="$FRMDB.Restaurant_Order{}.email" class="form-control" placeholder="email@domain.com" data-frmdb-value="$FRMDB.Restaurant_Order{}.email" title="" data-frmdb-pending="" required="">
                                 <div class="input-group-append">
                                     <span class="input-group-text">
                                         <frmdb-icon name="fontawesome-solid-at-address-author-e-mail-email-handle" class="text-white sz-1"></frmdb-icon>
@@ -43,7 +43,7 @@
                         </div>
                         <div class="form-group">
                             <div class="input-group date">
-                                <input type="tel" class="form-control" placeholder="delivery address" name="$FRMDB.Restaurant_Order[].delivery_address" data-frmdb-value="$FRMDB.Restaurant_Order[].delivery_address" title="" data-frmdb-pending="">
+                                <input type="tel" class="form-control" placeholder="delivery address" name="$FRMDB.Restaurant_Order{}.delivery_address" data-frmdb-value="$FRMDB.Restaurant_Order{}.delivery_address" title="" data-frmdb-pending="">
                                 <div class="input-group-append">
                                     <span class="input-group-text">
                                         <frmdb-icon name="fontawesome-solid-map-marker-alt-address-coordinates-destination-gps-localize-location-map-navigation-paper-pin-place-point_of_interest-position-route-travel" class="text-white sz-1"></frmdb-icon>
@@ -85,16 +85,16 @@
             <p>Section lead paragraph, some text about the content described in this section.</p>
         </div>
         <frmdb-t-card-deck class="frmdb-cards-4">
-            <frmdb-t-card-media-main class="" data-frmdb-table="$FRMDB.Restaurant_Menu_Item[]" data-frmdb-record="Restaurant_Menu_Item~~vVsexqeTReF1iWoAUU4ten" data-frmdb-table-limit="1">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/pizza-time/static/57e3d1474d50ac14f6da8c7dda2936771d3edce4524c704c7d2979d2924cc558_1280.jpg&quot;);" data-frmdb-value="$FRMDB.Restaurant_Menu_Item[].picture" data-frmdb-record="Restaurant_Menu_Item~~vVsexqeTReF1iWoAUU4ten" data-frmdb-pending=""></frmdb-t-img>
+            <frmdb-t-card-media-main class="" data-frmdb-table="$FRMDB.Restaurant_Menu_Item[]" data-frmdb-record="Restaurant_Menu_Item~~vVsexqeTReF1iWoAUU4ten" data-frmdb-table-limit="4">
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/57e3d1474d50ac14f6da8c7dda2936771d3edce4524c704c7d2979d2924cc558_1280.jpg&quot;);" data-frmdb-value="$FRMDB.Restaurant_Menu_Item[].picture" data-frmdb-record="Restaurant_Menu_Item~~vVsexqeTReF1iWoAUU4ten" data-frmdb-pending=""></frmdb-t-img>
                 <div class="card-body">
-                    <h5 data-frmdb-value="$FRMDB.Restaurant_Menu_Item[].name" data-frmdb-pending="">pizza 2</h5>
+                    <h5 data-frmdb-value="$FRMDB.Restaurant_Menu_Item[].name" data-frmdb-pending="">pizza</h5>
                     <p data-frmdb-value="$FRMDB.Restaurant_Menu_Item[].description" data-frmdb-pending="">best pizza in town</p>
                     <form class="was-validated" data-frmdb-bind-to-record="$FRMDB.Restaurant_Order_Item~~" data-frmdb-rules="menu_item_id = $CLOSEST(Restaurant_Menu_Item._id);;order_id = $CLOSEST(Restaurant_Order._id)" data-frmdb-form-autosave="">
                         <div class="form-group row">
                             <label class="col col-md-6" for="exampleInputEmail1">Quantity</label>
                             <div class="col col-md-6">
-                                <input type="number" class="form-control" id="exampleInputEmail1" aria-describedby="quantity" placeholder="1" data-frmdb-value="$FRMDB.Restaurant_Order_Item[].quantity" name="$FRMDB.Restaurant_Order_Item[].quantity" title="" data-frmdb-pending="">
+                                <input type="number" class="form-control" id="exampleInputEmail1" aria-describedby="quantity" placeholder="1" data-frmdb-value="$FRMDB.Restaurant_Order_Item{}.quantity" name="$FRMDB.Restaurant_Order_Item{}.quantity" title="" data-frmdb-pending="undefined">
                             </div>
                         </div>
                     </form>
@@ -107,58 +107,76 @@
                     <small>EUR</small>
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
-            <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/pizza-time/static/5fe4d6414e57b108f5d08460c6293e76143ddfe44e507441732d7dd1964dc5_1280.jpg&quot;);"></frmdb-t-img>
+            <frmdb-t-card-media-main class="" data-frmdb-table="$FRMDB.Restaurant_Menu_Item[]" data-frmdb-record="Restaurant_Menu_Item~~qnrYmFumAtvT5YYQfZFMe9" data-frmdb-table-limit="4">
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/57e2d6454c5ab10ff3d8997cc6213f7f173edff85254794f74267ed09648_640.jpg&quot;);" data-frmdb-value="$FRMDB.Restaurant_Menu_Item[].picture" data-frmdb-record="Restaurant_Menu_Item~~vVsexqeTReF1iWoAUU4ten" data-frmdb-pending=""></frmdb-t-img>
                 <div class="card-body">
-                    <h5>Handmade</h5>
-                    <h6>Card 2 subtitle</h6>
-                    <p>Integer sit amet nisi viverra, pharetra nibh</p>
+                    <h5 data-frmdb-value="$FRMDB.Restaurant_Menu_Item[].name" data-frmdb-pending="">Grill</h5>
+                    <p data-frmdb-value="$FRMDB.Restaurant_Menu_Item[].description" data-frmdb-pending="">Juicy grilled steak</p>
+                    <form class="was-validated" data-frmdb-bind-to-record="$FRMDB.Restaurant_Order_Item~~" data-frmdb-rules="menu_item_id = $CLOSEST(Restaurant_Menu_Item._id);;order_id = $CLOSEST(Restaurant_Order._id)" data-frmdb-form-autosave="">
+                        <div class="form-group row">
+                            <label class="col col-md-6" for="exampleInputEmail1">Quantity</label>
+                            <div class="col col-md-6">
+                                <input type="number" class="form-control" id="exampleInputEmail1" aria-describedby="quantity" placeholder="1" data-frmdb-value="$FRMDB.Restaurant_Order_Item{}.quantity" name="$FRMDB.Restaurant_Order_Item{}.quantity" title="" data-frmdb-pending="undefined">
+                            </div>
+                        </div>
+                    </form>
                 </div>
                 <frmdb-t-card-action class="">
                     <a href="javascript:void(0)" class="">Action</a>
                 </frmdb-t-card-action>
                 <frmdb-t-card-note class="">
-                    <span>INFO 
-                        <small>info</small>
-                    </span>
+                    <span data-frmdb-value=":TEXT(price,&quot;##,##0.00&quot;):$FRMDB.Restaurant_Menu_Item[]" data-frmdb-pending="">12.00</span>
+                    <small>EUR</small>
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
-            <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/pizza-time/static/52e6dd434f57ad14f6da8c7dda2936771d3edce4524c704c7d2979d2924cc558_1280.jpg&quot;);"></frmdb-t-img>
+            <frmdb-t-card-media-main class="" data-frmdb-table="$FRMDB.Restaurant_Menu_Item[]" data-frmdb-record="Restaurant_Menu_Item~~7nkPVYR52KGLn7ahGGk4CL" data-frmdb-table-limit="4">
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/57e5dd47435ba514f6da8c7dda2936771d3edce4524c704c7d297ad3954ec359_1280.jpg&quot;);" data-frmdb-value="$FRMDB.Restaurant_Menu_Item[].picture" data-frmdb-record="Restaurant_Menu_Item~~vVsexqeTReF1iWoAUU4ten" data-frmdb-pending=""></frmdb-t-img>
                 <div class="card-body">
-                    <h5>Fresh ingredients</h5>
-                    <h6>Card 3 subtitle</h6>
-                    <p>Curabitur suscipit, massa eu maximus fringilla</p>
+                    <h5 data-frmdb-value="$FRMDB.Restaurant_Menu_Item[].name" data-frmdb-pending="">Salad</h5>
+                    <p data-frmdb-value="$FRMDB.Restaurant_Menu_Item[].description" data-frmdb-pending="">Fresh and delicious</p>
+                    <form class="was-validated" data-frmdb-bind-to-record="$FRMDB.Restaurant_Order_Item~~" data-frmdb-rules="menu_item_id = $CLOSEST(Restaurant_Menu_Item._id);;order_id = $CLOSEST(Restaurant_Order._id)" data-frmdb-form-autosave="">
+                        <div class="form-group row">
+                            <label class="col col-md-6" for="exampleInputEmail1">Quantity</label>
+                            <div class="col col-md-6">
+                                <input type="number" class="form-control" id="exampleInputEmail1" aria-describedby="quantity" placeholder="1" data-frmdb-value="$FRMDB.Restaurant_Order_Item{}.quantity" name="$FRMDB.Restaurant_Order_Item{}.quantity" title="" data-frmdb-pending="undefined">
+                            </div>
+                        </div>
+                    </form>
                 </div>
                 <frmdb-t-card-action class="">
                     <a href="javascript:void(0)" class="">Action</a>
                 </frmdb-t-card-action>
                 <frmdb-t-card-note class="">
-                    <span>INFO 
-                        <small>info</small>
-                    </span>
+                    <span data-frmdb-value=":TEXT(price,&quot;##,##0.00&quot;):$FRMDB.Restaurant_Menu_Item[]" data-frmdb-pending="">9.00</span>
+                    <small>EUR</small>
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
-            <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/pizza-time/static/57e3d4444c5ba514f6da8c7dda2936771d3edce4524c704c7d2979d2924cc558_1280.jpg&quot;);"></frmdb-t-img>
+            <frmdb-t-card-media-main class="" data-frmdb-table="$FRMDB.Restaurant_Menu_Item[]" data-frmdb-record="Restaurant_Menu_Item~~3MMN4uaCkpvKH4i8kmbDXu" data-frmdb-table-limit="20">
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/51e3d441435ab108f5d08460c6293e76143ddfe44e507441732d7dd59f4ac4_1280.jpg&quot;);" data-frmdb-value="$FRMDB.Restaurant_Menu_Item[].picture" data-frmdb-record="Restaurant_Menu_Item~~vVsexqeTReF1iWoAUU4ten" data-frmdb-pending=""></frmdb-t-img>
                 <div class="card-body">
-                    <h5>Party Pizza</h5>
-                    <h6>Card 4 subtitle</h6>
-                    <p>Etiam porta magna eu rutrum rhoncus</p>
+                    <h5 data-frmdb-value="$FRMDB.Restaurant_Menu_Item[].name" data-frmdb-pending="">Burger</h5>
+                    <p data-frmdb-value="$FRMDB.Restaurant_Menu_Item[].description" data-frmdb-pending="">Best burger you ever tasted</p>
+                    <form class="was-validated" data-frmdb-bind-to-record="$FRMDB.Restaurant_Order_Item~~" data-frmdb-rules="menu_item_id = $CLOSEST(Restaurant_Menu_Item._id);;order_id = $CLOSEST(Restaurant_Order._id)" data-frmdb-form-autosave="">
+                        <div class="form-group row">
+                            <label class="col col-md-6" for="exampleInputEmail1">Quantity</label>
+                            <div class="col col-md-6">
+                                <input type="number" class="form-control" id="exampleInputEmail1" aria-describedby="quantity" placeholder="1" data-frmdb-value="$FRMDB.Restaurant_Order_Item{}.quantity" name="$FRMDB.Restaurant_Order_Item{}.quantity" title="" data-frmdb-pending="">
+                            </div>
+                        </div>
+                    </form>
                 </div>
                 <frmdb-t-card-action class="">
                     <a href="javascript:void(0)" class="">Action</a>
                 </frmdb-t-card-action>
                 <frmdb-t-card-note class="">
-                    <span>INFO 
-                        <small>info</small>
-                    </span>
+                    <span data-frmdb-value=":TEXT(price,&quot;##,##0.00&quot;):$FRMDB.Restaurant_Menu_Item[]" data-frmdb-pending="">11.00</span>
+                    <small>EUR</small>
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
         </frmdb-t-card-deck>
         <frmdb-t-section-divider></frmdb-t-section-divider>
     </section>
-    <frmdb-t-media-section-main style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/pizza-time/static/57e3d1474d50ac14f6da8c7dda2936771d3edce4524c704c7d2979d2924cc558_1280.jpg&quot;);" class="">
+    <frmdb-t-media-section-main style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/57e3d1474d50ac14f6da8c7dda2936771d3edce4524c704c7d2979d2924cc558_1280.jpg&quot;);" class="">
         <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="container py-5">
             <div class="row py-5">
@@ -176,7 +194,7 @@
         <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="row">
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/frmdb-apps/pizza-time/static/54e5dd4a4f55a914f6da8c7dda2936771d3edce4524c704c7d2979d2924cc558_1280.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/frmdb-apps/restaurant/static/54e5dd4a4f55a914f6da8c7dda2936771d3edce4524c704c7d2979d2924cc558_1280.jpg" alt="...">
             </div>
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron">
@@ -189,7 +207,7 @@
         </div>
         <frmdb-t-section-divider></frmdb-t-section-divider>
     </section>
-    <frmdb-t-section-cards-icon style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/pizza-time/static/55e2dc464851b108f5d08460c6293e76143ddfe44e507441732d7dd1964dc5_1280.jpg&quot;);" class="">
+    <frmdb-t-section-cards-icon style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/55e2dc464851b108f5d08460c6293e76143ddfe44e507441732d7dd1964dc5_1280.jpg&quot;);" class="">
         <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="section_title text-center">
             <h2 id="themeiconcards">PIZZA DELIVERED TO YOUR DOORSTEP</h2>
@@ -233,7 +251,7 @@
                 </div>
             </div>
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/frmdb-apps/pizza-time/static/52e2dd414b54a514f6da8c7dda2936771d3edce4524c704c7d2979d2924ec35f_1280.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/frmdb-apps/restaurant/static/52e2dd414b54a514f6da8c7dda2936771d3edce4524c704c7d2979d2924ec35f_1280.jpg" alt="...">
             </div>
         </div>
         <frmdb-t-section-divider></frmdb-t-section-divider>
